Implement Review comments